--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+  .btn-primary{
+    @apply rounded-lg font-semibold bg-gradient-to-b from-primary-500 to-secondary-700 text-white
+  }
+  .btn-primary-outlined{
+    @apply rounded-lg font-semibold border border-solid border-primary-500 text-primary-500
+  }
+}
