modified:   src/App.tsx modified:   src/UI/Feedback/Loading.tsx new file:   src/data/hooks/auth.ts modified:   src/features/Auth.tsx modified:   src/features/Auth/Login.tsx modified:   src/features/Auth/Register.tsx new file:   src/features/RouteProtection.tsx modified:   src/index.css new file:   src/services/auth.ts new file:   src/services/supabase.ts modified:   src/utils/Auth/login.ts modified:   src/utils/Auth/register.ts

--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,10 @@
   .btn-primary-outlined{
     @apply rounded-lg font-semibold border border-solid border-primary-500 text-primary-500
   }
+  .btn-disabled{
+    @apply rounded-lg font-semibold bg-gradient-to-b from-gray-600 to-gray-400 text-gray-800
+  }
+  .btn-disabled-outlined{
+    @apply rounded-lg font-semibold border border-solid border-gray-800 text-gray-800
+  }
 }
